[project]
name = "tinymem0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.20.0",
    "sentence-transformers>=2.2.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "frozenlist==1.8.0",
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "multidict==6.7.0",
    "numpy>=1.26",
    "portalocker==2.10.1",
    "propcache==0.4.1",
    "protobuf==6.33.4",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.0.0",
    "qdrant-client==1.7.0",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==1.26.20",
    "yarl==1.22.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "memory_system", "prompt", "util"]
